# calpas

./: .gitignore  ChangeLog.md  README.md  calpas.cabal  flake.nix  hie.yaml
.github/workflows/: ci.yaml
compiler-test/: Main.hs
compiler-test/data/golden/: iso7185prt0001.golden  iso7185prt0001.pas  iso7185prt0002.golden  iso7185prt0003.golden  iso7185prt0006.golden  iso7185prt0007.golden  iso7185prt0008.golden  iso7185prt0009.golden  iso7185prt0010.golden  iso7185prt0011.golden  iso7185prt0012.golden  iso7185prt0013.golden  iso7185prt0014.golden  iso7185prt0015.golden  iso7185prt0015.pas  iso7185prt0016.golden  iso7185prt0017.golden  iso7185prt0018.golden  iso7185prt0019.golden  iso7185prt0020.golden  iso7185prt0021.golden  iso7185prt0022.golden  iso7185prt0023.golden  iso7185prt0024.golden  iso7185prt0025.golden  iso7185prt0026.golden  iso7185prt0027.golden  iso7185prt0028.golden  iso7185prt0029.golden  iso7185prt0030.golden  iso7185prt0031.golden  iso7185prt0032.golden  iso7185prt0033.golden  iso7185prt0034.golden  iso7185prt0035.golden  iso7185prt0036.golden  iso7185prt0037.golden  iso7185prt0038.golden  iso7185prt0039.golden  iso7185prt0040.golden
compiler/Calpas/Compiler/: Parser.hs
lib/: Prelude.hs
lib/Calpas/Compiler/: Parser.hs
