cabal-version:       2.4
name:                calpas
version:             0.1.0
synopsis:            A Pascal compiler targeting the JVM
description:         Calpas is a compiler for Standard Pascal with some extensions.
homepage:            https://github.com/rkaippully/calpas#readme
bug-reports:         https://github.com/rkaippully/calpas/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2022 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Language, Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md


source-repository head
  type:      git
  location:  https://github.com/rkaippully/calpas


common common-settings
  default-language:   Haskell2010
  default-extensions: DeriveAnyClass
                      DeriveGeneric
                      DerivingVia
                      FlexibleContexts
                      GeneralizedNewtypeDeriving
                      LambdaCase
                      OverloadedStrings
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  ghc-options:        -O2
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wmissing-deriving-strategies
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -Werror
                      -fshow-warning-groups
  build-depends:      base ==4.16.3.0

executable calpasc
  import:             common-settings
  main-is:            Main.hs
  other-modules:      Calpas.Compiler.Parser
  hs-source-dirs:     compiler
  other-modules:      Paths_calpas
  autogen-modules:    Paths_calpas
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      megaparsec ==9.2.1
                    , text ==1.2.5.0

test-suite calpasc-test
  import:             common-settings
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     compiler-test
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
