cabal-version:       2.4
name:                calpas
version:             0.1.0
synopsis:            A Pascal compiler targeting the JVM
description:         Calpas is a compiler for Standard Pascal with some extensions.
homepage:            https://github.com/rkaippully/calpas#readme
bug-reports:         https://github.com/rkaippully/calpas/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020-2022 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
category:            Language, Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md


source-repository head
  type:      git
  location:  https://github.com/rkaippully/calpas


common common-settings
  default-language:   Haskell2010
  default-extensions: DeriveAnyClass
                      DeriveGeneric
                      DerivingVia
                      DerivingStrategies
                      DuplicateRecordFields
                      FlexibleContexts
                      GeneralizedNewtypeDeriving
                      LambdaCase
                      OverloadedLists
                      OverloadedStrings
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  ghc-options:        -O2
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wmissing-deriving-strategies
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -Werror
                      -fshow-warning-groups

library                    
  import:             common-settings
  exposed-modules:    Prelude
                    , Calpas.Compiler.Parser
  hs-source-dirs:     lib
  build-depends:      base-noprelude     ==4.13.0.0
                    , case-insensitive   ==1.2.1.0
                    , megaparsec         ==9.2.1
                    , parser-combinators ==1.3.0
                    , relude             ==1.1.0.0
                    , scientific         ==0.3.7.0

executable calpasc
  import:             common-settings
  hs-source-dirs:     compiler
  main-is:            Main.hs
  build-depends:      calpas
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N

test-suite calpasc-test
  import:             common-settings
                    , common-settings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     compiler-test
  main-is:            Main.hs
  build-depends:      calpas
                    , directory     ==1.3.6.2
                    , filepath      ==1.4.2.2
                    , pretty-simple ==4.0.0.0
                    , tasty         ==1.4.2.3
                    , tasty-golden  ==2.3.5
